# mavix-openmap-server

./: .gitmodules  CMakeLists.txt  README.md
cmake/: memory-allocator-build.cmake  protobuf-generate.cmake
libs/mavix-core/: CMakeLists.txt  main.cc
libs/mavix-core/src/mavix/v1/core/: aflag_once.h  async_counter.h  buffer_struct.h  cache_bucket.h  concurrent_queue.h  core.h  helper.cc  helper.h  icache_bucket.h  memory_buffer.h  page_locator.h  round_robin_scheduler.h  segment_buffer.h  semaphore.h  shared_buffer.cc  shared_buffer.h  stream.h  stream_base.h  stream_buffer.h  stream_state.h  telemetry_monitor.h  timer.h
libs/mavix-core/src/mavix/v1/core/memory/: mem_allocator.h  memory_allocator.h
libs/mavix-osm/: .gitignore  CMakeLists.txt  README.md  main.cc
libs/mavix-osm/libs/osmpbf/: fileformat.pb.cc  fileformat.pb.h  osmformat.pb.cc  osmformat.pb.h
libs/mavix-osm/proto/: fileformat.proto
libs/mavix-osm/src/mavix/v1/osm/: block_type.h  element_base.h  element_type.h  helper.cc  helper.h  osm_pbf_reader.h  osm_pbf_reader_lock.h  skip_options.h
libs/mavix-osm/src/mavix/v1/osm/formats/: header_bbox.cc  header_bbox.h  node.h  osm_file_header.cc  osm_file_header.h  primitive_block.h  relation.h  way.h
libs/mavix-osm/src/mavix/v1/osm/pbf/: osm_decoder.cc.b  osm_decoder.h.b  osm_field_decoder.h  pbf_block_detector.h  pbf_block_map.h  pbf_declare.h  pbf_decoder.h  pbf_field_decoder.h  pbf_stream_blob_iterator.cc.b  pbf_stream_blob_iterator.h.b  pbf_stream_decoder.cc.b  pbf_stream_decoder.h.b  pbf_stream_reader.h  pbf_stream_scanner.h  pbf_tokenizer.h
libs/mavix-renderer/: CMakeLists.txt
libs/mavix-renderer/src/mavix/v1/renderer/: helper.h
libs/mavix-spatial/: CMakeLists.txt  main.cc
libs/mavix-spatial/src/mavix/v1/spatial/: helper.cc  spatial.h  tile_declaration.h  tile_utility.h
libs/mavix-storage/: CMakeLists.txt
libs/mavix-storage/src/mavix/v1/storage/: helper.cc  helper.h
libs/mavix-tiles/: CMakeLists.txt
libs/mavix-utils/: CMakeLists.txt
libs/mavix-utils/src/mavix/v1/utils/: compression.h  icompression.h  lz4_compression.cc  lz4_compression.h  lzma_compression.cc  lzma_compression.h  zlib_compression.cc  zlib_compression.h  zstd_compression.cc  zstd_compression.h
mavix-map-cli/mavix/mavix/v1/cli/map/: helper.cc  helper.h
mavix/mavix/v1/: helper.cc  helper.h
